@@ -31,7 +31,7 @@ float wcstof (const wchar_t * __restrict__ wcs, wchar_t ** __restrict__ wcse)
   if (cp == 0) /* C locale */
     {
       for (i = 0; (wcs[i] != 0) && wcs[i] <= 255; i++)
-        cs[i] = (char) wcs[i];
+	cs[i] = (char) wcs[i];
       cs[i]  = '\0';
     }
   else
@@ -41,7 +41,7 @@ float wcstof (const wchar_t * __restrict__ wcs, wchar_t ** __restrict__ wcse)
       /* loop through till we hit null or invalid character */
       for (i = 0; (wcs[i] != 0) && (nbytes != 0); i++)
 	{
-     	  nbytes = WideCharToMultiByte(cp, WC_COMPOSITECHECK | WC_SEPCHARS,
+	  nbytes = WideCharToMultiByte(cp, WC_COMPOSITECHECK | WC_SEPCHARS,
 				       wcs + i, 1, cs + mb_len, MB_CUR_MAX,
 				       NULL, NULL);
 	  mb_len += nbytes;
@@ -59,6 +59,6 @@ float wcstof (const wchar_t * __restrict__ wcs, wchar_t ** __restrict__ wcse)
       *wcse = (wchar_t *) wcs + i;
     }
   free (cs);
- 
+
   return ret;
 }
